# warehouse_ros_sqlite

./: .pre-commit-config.yaml  .travis.yml  CHANGELOG.rst  CMakeLists.txt  LICENSE.txt  README.md  SCHEMA.md  package.xml  sqlite_database_connection_plugin_description.xml  warehouse_ros.rosinstall  warehouse_ros_sqlite.repos
.github/workflows/: build_and_test.yaml  format.yaml  prerelease.yaml
include/warehouse_ros_sqlite/: database_connection.h  database_connection.hpp  exceptions.h  exceptions.hpp  message_collection_helper.h  message_collection_helper.hpp  metadata.h  metadata.hpp  query.h  query.hpp  result_iteration_helper.h  result_iteration_helper.hpp  utils.h  utils.hpp  variant.h
include/warehouse_ros_sqlite/impl/: variant.h  variant.hpp
src/: database_connection.cpp  message_collection_helper.cpp  metadata.cpp  query.cpp  result_iteration_helper.cpp
test/: BusyHandler.cpp  DatabaseConnection.cpp  SchemaVersion.cpp  TestLoader.cpp  loader.test
