<package format="3">
  <name>warehouse_ros_sqlite</name>
  <version>1.0.3</version>
  <description>
    Implementation of warehouse_ros for sqlite
  </description>
  <author>Bjarne von Horn</author>
  <maintainer email="moveit_releasers@googlegroups.com">MoveIt Release Team</maintainer>

  <license>BSD</license>
  <url>http://ros.org/wiki/warehouse_ros</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>sqlite3_vendor</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>libsqlite3-dev</build_depend>

  <depend>warehouse_ros</depend>
  <depend>class_loader</depend>
  <depend>rclcpp</depend>

  <exec_depend>sqlite3</exec_depend>

  <test_depend>ament_cmake_copyright</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend version_gte="0.7.1">ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>geometry_msgs</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <warehouse_ros plugin="${prefix}/sqlite_database_connection_plugin_description.xml"/>
  </export>
</package>
